Modification in heart disease and diabetes models

--- a/models/HeartDiseasePrediction.ipynb
+++ b/models/HeartDiseasePrediction.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 1,
       "metadata": {
         "id": "APhUIeQbQ84h"
       },
@@ -52,10 +52,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 226
         },
         "id": "p2y53pynRiHk",
-        "outputId": "00b6b98e-a803-4d29-c503-723cf223a5e8"
+        "outputId": "f01491b9-0ece-4b9d-c84b-4eb1f94fe402"
       },
       "execution_count": 3,
       "outputs": [
@@ -79,7 +79,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ea9b76ac-c4fe-4df9-9258-004635aea197\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-a1409d4d-f0a3-4ac3-8e0b-67f2a84dc976\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -206,7 +206,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ea9b76ac-c4fe-4df9-9258-004635aea197')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a1409d4d-f0a3-4ac3-8e0b-67f2a84dc976')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -258,12 +258,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-ea9b76ac-c4fe-4df9-9258-004635aea197 button.colab-df-convert');\n",
+              "        document.querySelector('#df-a1409d4d-f0a3-4ac3-8e0b-67f2a84dc976 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-ea9b76ac-c4fe-4df9-9258-004635aea197');\n",
+              "        const element = document.querySelector('#df-a1409d4d-f0a3-4ac3-8e0b-67f2a84dc976');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -283,8 +283,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-9bc01fc7-4e66-4275-b2d5-db98722204dc\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-9bc01fc7-4e66-4275-b2d5-db98722204dc')\"\n",
+              "<div id=\"df-5aa56d7a-ef44-4ea0-91b6-a1b814013a4f\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5aa56d7a-ef44-4ea0-91b6-a1b814013a4f')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -403,7 +403,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-9bc01fc7-4e66-4275-b2d5-db98722204dc button');\n",
+              "        document.querySelector('#df-5aa56d7a-ef44-4ea0-91b6-a1b814013a4f button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -434,7 +434,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BZfAEm-CRs4c",
-        "outputId": "4d19e257-74ba-47ed-f891-02284fb1c0b1"
+        "outputId": "63b9619c-c728-47b9-ed8e-4d89c0787de0"
       },
       "execution_count": 4,
       "outputs": [
@@ -478,7 +478,7 @@
           "height": 523
         },
         "id": "RwkcEueoRwOk",
-        "outputId": "f2ec67b8-2068-4161-b9a3-2e01dacdaa4b"
+        "outputId": "6a6f70a7-a539-4da3-bb23-eb02897bb45e"
       },
       "execution_count": 5,
       "outputs": [
@@ -602,7 +602,7 @@
           "height": 320
         },
         "id": "Ed6eXK3wRxvC",
-        "outputId": "70437b4e-18c5-4f75-ae17-dc651393b16a"
+        "outputId": "d81a79e7-ae5a-4410-d2d6-9befd8453a71"
       },
       "execution_count": 6,
       "outputs": [
@@ -642,7 +642,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-32931c6a-2bfe-4f73-82f0-dffacb36ea72\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-d40dbb8c-ff89-4cca-bde6-71e13ab4a6a4\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -820,7 +820,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-32931c6a-2bfe-4f73-82f0-dffacb36ea72')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d40dbb8c-ff89-4cca-bde6-71e13ab4a6a4')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -872,12 +872,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-32931c6a-2bfe-4f73-82f0-dffacb36ea72 button.colab-df-convert');\n",
+              "        document.querySelector('#df-d40dbb8c-ff89-4cca-bde6-71e13ab4a6a4 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-32931c6a-2bfe-4f73-82f0-dffacb36ea72');\n",
+              "        const element = document.querySelector('#df-d40dbb8c-ff89-4cca-bde6-71e13ab4a6a4');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -897,8 +897,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-75254c9b-1117-4467-b150-faec8ddd031b\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-75254c9b-1117-4467-b150-faec8ddd031b')\"\n",
+              "<div id=\"df-2e9527c7-c33b-4cdb-8e2c-a00329e2e737\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-2e9527c7-c33b-4cdb-8e2c-a00329e2e737')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1017,7 +1017,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-75254c9b-1117-4467-b150-faec8ddd031b button');\n",
+              "        document.querySelector('#df-2e9527c7-c33b-4cdb-8e2c-a00329e2e737 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1047,7 +1047,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mEyc-vzlR2E8",
-        "outputId": "a5f0872e-32b4-483e-e9b1-f6d4026c9493"
+        "outputId": "e9e1982a-4c30-474a-874b-9655706723da"
       },
       "execution_count": 7,
       "outputs": [
@@ -1075,7 +1075,7 @@
           "height": 178
         },
         "id": "e4NUKUugR3-M",
-        "outputId": "b0f57b74-c474-414a-804e-1d0f88d3616a"
+        "outputId": "57d35b87-04fd-4a4d-fa98-fed23b4a95e5"
       },
       "execution_count": 8,
       "outputs": [
@@ -1155,7 +1155,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "erHejNesTg9t",
-        "outputId": "6560fbe7-f771-425b-8186-c45f1f8433fd"
+        "outputId": "a096d144-c522-47af-b7b6-c82f03d1f48a"
       },
       "execution_count": 10,
       "outputs": [
@@ -1204,7 +1204,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EQr2Uf9TTio0",
-        "outputId": "fa459c1d-15ce-42b5-c10c-871d7f6e06e7"
+        "outputId": "1d8f45fd-7573-4613-e032-d17d782975c2"
       },
       "execution_count": 11,
       "outputs": [
@@ -1238,12 +1238,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 990
+          "height": 673
         },
         "id": "Mljf3ELA5ppk",
-        "outputId": "5df7085a-98fd-4876-9982-b96e556727bd"
+        "outputId": "ac51caf8-19d7-478c-ca3c-e8805b9aabba"
       },
-      "execution_count": 15,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1278,7 +1278,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RpXK728rTnPt",
-        "outputId": "2c666ec8-7546-4df1-a618-f18453c6c157"
+        "outputId": "f02fe704-499c-42a2-be3c-01ec6802ed66"
       },
       "execution_count": 17,
       "outputs": [
@@ -1299,7 +1299,7 @@
       "metadata": {
         "id": "Y0nBVcjJTotU"
       },
-      "execution_count": 18,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -1314,7 +1314,7 @@
           "height": 80
         },
         "id": "lW84n_STTqQl",
-        "outputId": "013173fa-6057-4d35-ae9b-c522f3e33329"
+        "outputId": "6ca8fce0-3ced-4098-b314-94d726b713d8"
       },
       "execution_count": 19,
       "outputs": [
@@ -1774,7 +1774,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "owAliHjTTv09",
-        "outputId": "3f5d328e-ecbd-4a14-817c-c424a8c2befd"
+        "outputId": "a8a27657-7d1f-464c-cfa9-eed899e9d962"
       },
       "execution_count": 21,
       "outputs": [
@@ -1816,7 +1816,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7RWnVTPkTzsI",
-        "outputId": "7101b651-4283-4e07-bdbb-b370acefa99c"
+        "outputId": "c3d56505-4053-460e-865d-2566e3a0377a"
       },
       "execution_count": 23,
       "outputs": [
@@ -1835,7 +1835,8 @@
     {
       "cell_type": "code",
       "source": [
-        "input_data = (62,0,0,140,268,0,0,160,0,3.6,0,2,2)\n",
+        "# input_data = (62,0,0,140,268,0,0,160,0,3.6,0,2,2)\n",
+        "input_data = (55, 0, 1, 120, 200, 0, 0, 150, 1, 2.5, 2, 1, 2)\n",
         "\n",
         "# change the input data to a numpy array\n",
         "input_data_as_numpy_array= np.asarray(input_data)\n",
@@ -1856,23 +1857,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zqMz_B7dT1P8",
-        "outputId": "a642c363-10aa-4b7b-b1e5-b3ec0fbe9a13"
+        "outputId": "867dfe6c-290d-4d8e-8a61-b11619d709e0"
       },
-      "execution_count": 24,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[0]\n",
-            "The Person does not have a Heart Disease\n"
+            "[1]\n",
+            "The Person has Heart Disease\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.10/dist-packages/sklearn/utils/validation.py:2739: UserWarning: X does not have valid feature names, but SVC was fitted with feature names\n",
+            "/usr/local/lib/python3.11/dist-packages/sklearn/utils/validation.py:2739: UserWarning: X does not have valid feature names, but SVC was fitted with feature names\n",
             "  warnings.warn(\n"
           ]
         }
@@ -1881,29 +1882,51 @@
     {
       "cell_type": "code",
       "source": [
-        "import pickle\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.svm import SVC\n",
+        "import joblib\n",
+        "import pandas as pd\n",
+        "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "# Save the model to a file\n",
-        "filename = 'heart_disease_model.pkl'\n",
-        "with open(filename, 'wb') as file:\n",
-        "    pickle.dump(model, file)\n",
+        "# Load dataset\n",
+        "heart_data = pd.read_csv('heart.csv')\n",
         "\n",
-        "print(f\"Model saved as {filename}\")"
+        "# Prepare data\n",
+        "X = heart_data.drop(columns='target', axis=1)\n",
+        "Y = heart_data['target']\n",
+        "\n",
+        "# Train-test split\n",
+        "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, stratify=Y, random_state=2)\n",
+        "\n",
+        "# Create pipeline\n",
+        "heart_pipeline = Pipeline([\n",
+        "    ('scaler', StandardScaler()),\n",
+        "    ('svc', SVC(kernel='linear'))\n",
+        "])\n",
+        "\n",
+        "# Train model\n",
+        "heart_pipeline.fit(X_train, Y_train)\n",
+        "\n",
+        "# Save the pipeline using joblib\n",
+        "joblib.dump(heart_pipeline, 'heart_disease_pipeline.joblib')\n",
+        "\n",
+        "print(\"Pipeline trained and saved successfully.\")\n"
       ],
       "metadata": {
-        "id": "Odon6ukHUeEP",
-        "outputId": "0beb8a47-490c-4e22-c646-e501dfa97aa8",
+        "id": "MeR9U-DPDJKL",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "940099fe-4bc5-40f4-e1b0-78a0fa886769"
       },
-      "execution_count": 25,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Model saved as heart_disease_model.pkl\n"
+            "Pipeline trained and saved successfully.\n"
           ]
         }
       ]
